--- a/app/src/main/res/layout/view_adapter_item_category_list.xml
+++ b/app/src/main/res/layout/view_adapter_item_category_list.xml
@@ -88,6 +88,7 @@
             android:gravity="center">
 
             <LinearLayout
+                android:id="@+id/llDetail"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
