--- a/baselibrary/src/main/res/layout/activity_common_list.xml
+++ b/baselibrary/src/main/res/layout/activity_common_list.xml
@@ -1,6 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rvCommonList"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"/>
+
+</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
