--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,10 +12,24 @@
         android:id="@+id/btnCommonList"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="列表"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:text="列表" />
+
+    <Button
+        android:id="@+id/btnDialog"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="弹窗" />
+
+    <Button
+        android:id="@+id/btnSingleDialog"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="单选弹窗" />
+
+    <Button
+        android:id="@+id/yjSingleDialog"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="永久单选弹窗" />
 
 </LinearLayout>
