--- a/baselibrary/src/main/res/values/dimens.xml
+++ b/baselibrary/src/main/res/values/dimens.xml
@@ -103,4 +103,106 @@
     <dimen name="common_dp_99">99dp</dimen>
     <dimen name="common_dp_100">100dp</dimen>
 
+    <dimen name="common_sp_0">0sp</dimen>
+    <dimen name="common_sp_1">1sp</dimen>
+    <dimen name="common_sp_2">2sp</dimen>
+    <dimen name="common_sp_3">3sp</dimen>
+    <dimen name="common_sp_4">4sp</dimen>
+    <dimen name="common_sp_5">5sp</dimen>
+    <dimen name="common_sp_6">6sp</dimen>
+    <dimen name="common_sp_7">7sp</dimen>
+    <dimen name="common_sp_8">8sp</dimen>
+    <dimen name="common_sp_9">9sp</dimen>
+    <dimen name="common_sp_10">10sp</dimen>
+    <dimen name="common_sp_11">11sp</dimen>
+    <dimen name="common_sp_12">12sp</dimen>
+    <dimen name="common_sp_13">13sp</dimen>
+    <dimen name="common_sp_14">14sp</dimen>
+    <dimen name="common_sp_15">15sp</dimen>
+    <dimen name="common_sp_16">16sp</dimen>
+    <dimen name="common_sp_17">17sp</dimen>
+    <dimen name="common_sp_18">18sp</dimen>
+    <dimen name="common_sp_19">19sp</dimen>
+    <dimen name="common_sp_20">20sp</dimen>
+    <dimen name="common_sp_21">21sp</dimen>
+    <dimen name="common_sp_22">22sp</dimen>
+    <dimen name="common_sp_23">23sp</dimen>
+    <dimen name="common_sp_24">24sp</dimen>
+    <dimen name="common_sp_25">25sp</dimen>
+    <dimen name="common_sp_26">26sp</dimen>
+    <dimen name="common_sp_27">27sp</dimen>
+    <dimen name="common_sp_28">28sp</dimen>
+    <dimen name="common_sp_29">29sp</dimen>
+    <dimen name="common_sp_30">30sp</dimen>
+    <dimen name="common_sp_31">31sp</dimen>
+    <dimen name="common_sp_32">32sp</dimen>
+    <dimen name="common_sp_33">33sp</dimen>
+    <dimen name="common_sp_34">34sp</dimen>
+    <dimen name="common_sp_35">35sp</dimen>
+    <dimen name="common_sp_36">36sp</dimen>
+    <dimen name="common_sp_37">37sp</dimen>
+    <dimen name="common_sp_38">38sp</dimen>
+    <dimen name="common_sp_39">39sp</dimen>
+    <dimen name="common_sp_40">40sp</dimen>
+    <dimen name="common_sp_41">41sp</dimen>
+    <dimen name="common_sp_42">42sp</dimen>
+    <dimen name="common_sp_43">43sp</dimen>
+    <dimen name="common_sp_44">44sp</dimen>
+    <dimen name="common_sp_45">45sp</dimen>
+    <dimen name="common_sp_46">46sp</dimen>
+    <dimen name="common_sp_47">47sp</dimen>
+    <dimen name="common_sp_48">48sp</dimen>
+    <dimen name="common_sp_49">49sp</dimen>
+    <dimen name="common_sp_50">50sp</dimen>
+    <dimen name="common_sp_51">51sp</dimen>
+    <dimen name="common_sp_52">52sp</dimen>
+    <dimen name="common_sp_53">53sp</dimen>
+    <dimen name="common_sp_54">54sp</dimen>
+    <dimen name="common_sp_55">55sp</dimen>
+    <dimen name="common_sp_56">56sp</dimen>
+    <dimen name="common_sp_57">57sp</dimen>
+    <dimen name="common_sp_58">58sp</dimen>
+    <dimen name="common_sp_59">59sp</dimen>
+    <dimen name="common_sp_60">60sp</dimen>
+    <dimen name="common_sp_61">61sp</dimen>
+    <dimen name="common_sp_62">62sp</dimen>
+    <dimen name="common_sp_63">63sp</dimen>
+    <dimen name="common_sp_64">64sp</dimen>
+    <dimen name="common_sp_65">65sp</dimen>
+    <dimen name="common_sp_66">66sp</dimen>
+    <dimen name="common_sp_67">67sp</dimen>
+    <dimen name="common_sp_68">68sp</dimen>
+    <dimen name="common_sp_69">69sp</dimen>
+    <dimen name="common_sp_70">70sp</dimen>
+    <dimen name="common_sp_71">71sp</dimen>
+    <dimen name="common_sp_72">72sp</dimen>
+    <dimen name="common_sp_73">73sp</dimen>
+    <dimen name="common_sp_74">74sp</dimen>
+    <dimen name="common_sp_75">75sp</dimen>
+    <dimen name="common_sp_76">76sp</dimen>
+    <dimen name="common_sp_77">77sp</dimen>
+    <dimen name="common_sp_78">78sp</dimen>
+    <dimen name="common_sp_79">79sp</dimen>
+    <dimen name="common_sp_80">80sp</dimen>
+    <dimen name="common_sp_81">81sp</dimen>
+    <dimen name="common_sp_82">82sp</dimen>
+    <dimen name="common_sp_83">83sp</dimen>
+    <dimen name="common_sp_84">84sp</dimen>
+    <dimen name="common_sp_85">85sp</dimen>
+    <dimen name="common_sp_86">86sp</dimen>
+    <dimen name="common_sp_87">87sp</dimen>
+    <dimen name="common_sp_88">88sp</dimen>
+    <dimen name="common_sp_89">89sp</dimen>
+    <dimen name="common_sp_90">90sp</dimen>
+    <dimen name="common_sp_91">91sp</dimen>
+    <dimen name="common_sp_92">92sp</dimen>
+    <dimen name="common_sp_93">93sp</dimen>
+    <dimen name="common_sp_94">94sp</dimen>
+    <dimen name="common_sp_95">95sp</dimen>
+    <dimen name="common_sp_96">96sp</dimen>
+    <dimen name="common_sp_97">97sp</dimen>
+    <dimen name="common_sp_98">98sp</dimen>
+    <dimen name="common_sp_99">99sp</dimen>
+    <dimen name="common_sp_100">100sp</dimen>
+
 </resources>
