--- a/baselibrary/src/main/res/values/themes.xml
+++ b/baselibrary/src/main/res/values/themes.xml
@@ -16,6 +16,15 @@
         <!-- Customize your theme here. -->
     </style>
 
+    <style name="dialogFullScreen" parent="@android:style/Theme.Dialog">
+        <item name="android:windowFrame">@null</item>
+        <item name="android:windowNoTitle">true</item>
+        <item name="android:windowIsTranslucent">true</item>
+        <item name="android:windowFullscreen">true</item>
+        <item name="android:background">@android:color/transparent</item>
+        <item name="android:windowBackground">@android:color/transparent</item>
+    </style>
+
     <!--ShapeableImageView 圆 -->
     <style name="CircleStyle">
         <item name="cornerFamily">rounded</item>
