--- a/baselibrary/src/main/res/layout/dialog_common_layout.xml
+++ b/baselibrary/src/main/res/layout/dialog_common_layout.xml
@@ -11,9 +11,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
-        android:paddingStart="16dp"
-        android:paddingTop="16dp"
-        android:paddingEnd="16dp"
+        android:paddingStart="@dimen/common_dp_16"
+        android:paddingTop="@dimen/common_dp_16"
+        android:paddingEnd="@dimen/common_dp_16"
         android:textColor="@color/gray3"
         android:textSize="@dimen/common_sp_16"
         android:textStyle="bold"
@@ -28,10 +28,10 @@
         android:gravity="center"
         android:minWidth="300dp"
         android:minHeight="120dp"
-        android:paddingStart="16dp"
-        android:paddingTop="16dp"
-        android:paddingEnd="16dp"
-        android:paddingBottom="25dp"
+        android:paddingStart="@dimen/common_dp_16"
+        android:paddingTop="@dimen/common_dp_16"
+        android:paddingEnd="@dimen/common_dp_16"
+        android:paddingBottom="@dimen/common_dp_25"
         android:text=""
         android:textColor="@color/gray3"
         android:textSize="@dimen/common_sp_16"
@@ -40,7 +40,7 @@
 
     <TextView
         android:layout_width="match_parent"
-        android:layout_height="1dp"
+        android:layout_height="@dimen/common_dp_1"
         android:background="#E3E4E5" />
 
 
@@ -53,7 +53,7 @@
         <TextView
             android:id="@+id/tvDialogCancel"
             android:layout_width="0dp"
-            android:layout_height="46dp"
+            android:layout_height="@dimen/common_dp_46"
             android:layout_weight="1"
             android:background="@null"
             android:gravity="center"
@@ -62,14 +62,14 @@
             tools:text="取消" />
 
         <TextView
-            android:layout_width="1dp"
+            android:layout_width="@dimen/common_dp_1"
             android:layout_height="match_parent"
             android:background="#E3E4E5" />
 
         <TextView
             android:id="@+id/tvDialogConfirm"
             android:layout_width="0dp"
-            android:layout_height="46dp"
+            android:layout_height="@dimen/common_dp_46"
             android:layout_weight="1"
             android:background="@null"
             android:gravity="center"
