--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -56,4 +56,10 @@
         android:layout_height="wrap_content"
         android:text="App通用弹窗" />
 
+    <Button
+        android:id="@+id/btnUserIndex"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="跳转个人中心" />
+
 </LinearLayout>
