--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,43 +18,14 @@
         android:id="@+id/btnDialog"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="弹窗" />
+        android:text="弹窗样式" />
+
 
     <Button
-        android:id="@+id/btnSingleDialog"
+        android:id="@+id/btnViewPager2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="单选弹窗" />
-
-    <Button
-        android:id="@+id/yjSingleStringDialog"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="永久单选String弹窗" />
-
-    <Button
-        android:id="@+id/yjSingleModelDialog"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="永久单选Model弹窗" />
-
-    <Button
-        android:id="@+id/yjMultiModeDialog"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="永久多选弹窗" />
-
-    <Button
-        android:id="@+id/customViewDialog"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="custom弹窗" />
-
-    <Button
-        android:id="@+id/appUseViewDialog"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="App通用弹窗" />
+        android:text="垂直滑动viewPager2" />
 
     <Button
         android:id="@+id/btnUserIndex"
