--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -34,9 +34,9 @@
         android:text="跳转个人中心" />
 
     <Button
-        android:id="@+id/jumpProgressBar"
+        android:id="@+id/jumpWebView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="跳转个人中心" />
+        android:text="跳转webview" />
 
 </LinearLayout>
