--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -46,4 +46,10 @@
         android:layout_height="wrap_content"
         android:text="拍照" />
 
+    <Button
+        android:id="@+id/jumpMagicIndicator"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="导航" />
+
 </LinearLayout>
