运行时权限

--- a/baselibrary/src/main/res/drawable/permissionx_dialog_bg.xml
+++ b/baselibrary/src/main/res/drawable/permissionx_dialog_bg.xml
@@ -3,7 +3,7 @@
 
     <solid android:color="@android:color/white" />
 
-    <corners android:radius="@dimen/common_dp_10" />
+    <corners android:radius="10dp" />
 
 
 </shape>
