--- a/baselibrary/src/main/res/values/themes.xml
+++ b/baselibrary/src/main/res/values/themes.xml
@@ -16,12 +16,17 @@
         <!-- Customize your theme here. -->
     </style>
 
-    <style name="dialogFullScreen" parent="@android:style/Theme.Dialog">
+    <style name="commonDialogStyle" parent="@android:style/Theme.Dialog">
+        <!--是否浮现在activity之上-->
+        <item name="android:windowIsFloating">true</item>
+        <!--是否模糊-->
+        <item name="android:backgroundDimEnabled">true</item>
+        <!--是否去除边框-->
         <item name="android:windowFrame">@null</item>
+        <!--是否去除标题 -->
         <item name="android:windowNoTitle">true</item>
-        <item name="android:windowIsTranslucent">true</item>
-        <item name="android:windowFullscreen">true</item>
         <item name="android:background">@android:color/transparent</item>
+        <!--背景颜色及和透明程度-->
         <item name="android:windowBackground">@android:color/transparent</item>
     </style>
 
