--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -52,4 +52,10 @@
         android:layout_height="wrap_content"
         android:text="导航" />
 
+    <Button
+        android:id="@+id/requestPermission"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="权限" />
+
 </LinearLayout>
