--- a/baselibrary/src/main/res/layout/permissionx_tip_dialog.xml
+++ b/baselibrary/src/main/res/layout/permissionx_tip_dialog.xml
@@ -1,42 +1,38 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:background="@drawable/common_dialog_bg"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:minWidth="300dp"
+    android:minHeight="120dp"
+    android:background="@drawable/permissionx_dialog_bg"
     android:orientation="vertical">
 
     <TextView
-        android:id="@+id/tvDialogTitle"
-        android:layout_width="wrap_content"
+        android:id="@+id/messageText"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        android:paddingStart="16dp"
-        android:paddingTop="16dp"
-        android:paddingEnd="16dp"
-        android:textColor="#333333"
-        android:textSize="16sp"
-        android:textStyle="bold"
-        tools:text="提示" />
+        android:layout_marginLeft="20dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginRight="20dp"
+        android:textColor="@color/gray3"
+        android:textSize="20sp"
+        tools:text="提示用户权限的用途" />
 
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_margin="20dp"
+        android:layout_weight="1"
+        android:scrollbars="none">
 
-    <TextView
-        android:id="@+id/tvDialogContent"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        android:gravity="center"
-        android:minWidth="300dp"
-        android:minHeight="120dp"
-        android:paddingStart="16dp"
-        android:paddingTop="16dp"
-        android:paddingEnd="16dp"
-        android:paddingBottom="25dp"
-        android:text=""
-        android:textColor="#333333"
-        android:textSize="16sp"
-        tools:text="弹窗内容弹窗内容" />
+        <LinearLayout
+            android:id="@+id/permissionsLayout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical" />
 
+    </ScrollView>
 
     <TextView
         android:layout_width="match_parent"
@@ -51,7 +47,7 @@
 
 
         <TextView
-            android:id="@+id/tvDialogCancel"
+            android:id="@+id/negativeBtn"
             android:layout_width="0dp"
             android:layout_height="46dp"
             android:layout_weight="1"
@@ -59,7 +55,7 @@
             android:gravity="center"
             android:textColor="#999999"
             android:textSize="16sp"
-            tools:text="取消" />
+            android:text="拒绝" />
 
         <TextView
             android:layout_width="1dp"
@@ -67,7 +63,7 @@
             android:background="#E3E4E5" />
 
         <TextView
-            android:id="@+id/tvDialogConfirm"
+            android:id="@+id/positiveBtn"
             android:layout_width="0dp"
             android:layout_height="46dp"
             android:layout_weight="1"
@@ -75,9 +71,8 @@
             android:gravity="center"
             android:textColor="#333333"
             android:textSize="16sp"
-            tools:text="确定" />
+            android:text="同意" />
 
     </LinearLayout>
-
 
 </LinearLayout>
