--- a/module_main/src/main/res/layout/activity_network_test.xml
+++ b/module_main/src/main/res/layout/activity_network_test.xml
@@ -23,4 +23,11 @@
         android:layout_height="wrap_content"
         android:text="上传文件" />
 
+
+    <Button
+        android:id="@+id/autoDisposeTest"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="autoDispose测试" />
+
 </LinearLayout>
