--- a/module_main/src/main/res/layout/activity_main.xml
+++ b/module_main/src/main/res/layout/activity_main.xml
@@ -63,4 +63,10 @@
         android:layout_height="wrap_content"
         android:text="apk下载" />
 
+    <Button
+        android:id="@+id/btnUserProfile"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="用户信息" />
+
 </LinearLayout>
