--- a/module_main/src/main/res/layout/activity_main.xml
+++ b/module_main/src/main/res/layout/activity_main.xml
@@ -69,4 +69,10 @@
         android:layout_height="wrap_content"
         android:text="用户信息" />
 
+    <Button
+        android:id="@+id/btnLiveData"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="livedata" />
+
 </LinearLayout>
