--- a/module_main/src/main/res/layout/activity_dialog_test.xml
+++ b/module_main/src/main/res/layout/activity_dialog_test.xml
@@ -10,7 +10,7 @@
         android:id="@+id/btnDialog"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="弹窗" />
+        android:text="Android默认Alert弹窗" />
 
     <Button
         android:id="@+id/btnSingleDialog"
