--- a/module_main/src/main/res/layout/activity_main.xml
+++ b/module_main/src/main/res/layout/activity_main.xml
@@ -94,5 +94,35 @@
 
     </LinearLayout>
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center">
+
+        <Button
+            android:id="@+id/btnWebP"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="webp图片加载" />
+
+        <Button
+            android:id="@+id/btnStopWebP"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="停止webp图片" />
+
+        <ImageView
+            android:id="@+id/ivImage"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="接受消息：默认" />
+
+    </LinearLayout>
+
+    <Button
+        android:id="@+id/btnLottie"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="lottie" />
 
 </LinearLayout>
