--- a/lib_core/src/main/res/values/colors.xml
+++ b/lib_core/src/main/res/values/colors.xml
@@ -42,6 +42,9 @@
     <color name="gray8">#888888</color>
     <color name="gray9">#999999</color>
 
+    <color name="gray70">#707070</color>
+
+
 
 
 </resources>
