--- a/module_main/src/main/res/layout/layout_main_btm_indicator_item.xml
+++ b/module_main/src/main/res/layout/layout_main_btm_indicator_item.xml
@@ -1,24 +1,44 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:gravity="center"
-    android:orientation="vertical">
+    android:layout_height="match_parent">
 
-    <ImageView
-        android:id="@+id/ivIcon"
-        android:layout_width="@dimen/common_dp_24"
-        android:layout_height="@dimen/common_dp_24" />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:gravity="center"
+        android:orientation="vertical">
+
+        <ImageView
+            android:id="@+id/ivIcon"
+            android:layout_width="@dimen/common_dp_24"
+            android:layout_height="@dimen/common_dp_24"
+            tools:src="@mipmap/ic_launcher" />
+
+        <TextView
+            android:id="@+id/tvName"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/common_dp_3"
+            android:text=""
+            android:textColor="@color/gray7"
+            android:textSize="@dimen/common_sp_12"
+            tools:text="首页" />
+
+    </LinearLayout>
 
     <TextView
-        android:id="@+id/tvName"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/common_dp_3"
-        android:text=""
-        android:textColor="@color/gray7"
-        android:textSize="@dimen/common_sp_12"
-        tools:text="首页" />
+        android:id="@+id/tvBadge"
+        android:layout_width="@dimen/common_dp_12"
+        android:layout_height="@dimen/common_dp_12"
+        android:layout_gravity="end|top"
+        android:layout_marginTop="@dimen/common_dp_2"
+        android:layout_marginEnd="@dimen/common_dp_25"
+        android:background="@drawable/drawable_dc143c_all_6"
+        android:gravity="center"
+        android:text="1"
+        android:textColor="@color/white"
+        android:textSize="@dimen/common_sp_8" />
 
-</LinearLayout>
+</FrameLayout>
