--- a/module_main/src/main/res/layout/layout_main_btm_indicator_item.xml
+++ b/module_main/src/main/res/layout/layout_main_btm_indicator_item.xml
@@ -39,6 +39,7 @@
         android:gravity="center"
         android:text="1"
         android:textColor="@color/white"
-        android:textSize="@dimen/common_sp_8" />
+        android:textSize="@dimen/common_sp_8"
+        android:visibility="gone" />
 
 </FrameLayout>
