--- a/module_a/src/main/res/layout/activity_module_a_test.xml
+++ b/module_a/src/main/res/layout/activity_module_a_test.xml
@@ -7,7 +7,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
-        android:text="个人中心"
+        android:text="Module-A-test"
         android:textColor="@color/black"
         android:textSize="@dimen/common_sp_16" />
 
