--- a/module_main/src/main/res/layout/activity_test.xml
+++ b/module_main/src/main/res/layout/activity_test.xml
@@ -14,6 +14,12 @@
         android:text="列表Activity" />
 
     <Button
+        android:id="@+id/btnActivityDetail"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Activity Detail" />
+
+    <Button
         android:id="@+id/btnDialog"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
