--- a/module_main/src/main/res/layout/fragment_me.xml
+++ b/module_main/src/main/res/layout/fragment_me.xml
@@ -34,6 +34,7 @@
 
 
         <LinearLayout
+            android:id="@+id/llFeedback"
             android:layout_width="match_parent"
             android:layout_height="55dp"
             android:gravity="center_vertical"
@@ -72,6 +73,7 @@
             android:background="@color/graye9" />
 
         <LinearLayout
+            android:id="@+id/llHistory"
             android:layout_width="match_parent"
             android:layout_height="55dp"
             android:gravity="center_vertical"
